crates/assembly/src/tests/snapshots/miden_assembly__tests__constants__const_word_from_string.snap
---
source: crates/assembly/src/tests/constants.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        push(13186528713821658146)
        push(1168993639339072050)
        push(4225041690115989743)
        push(10613494933894083877)
        noop
        noop
    end
end
