crates/assembly/src/tests/snapshots/miden_assembly__tests__constants__constant_numeric_expression.snap
---
source: crates/assembly/src/tests/constants.rs
expression: program
---
begin
    basic_block push(2147483648) push(4294967294) mstore drop push(26) noop end
end
