crates/assembly/src/tests/snapshots/miden_assembly__tests__constants__link_time_const_evaluation_succeeds.snap
---
source: crates/assembly/src/tests/constants.rs
expression: program
---
begin
    join
        join
            basic_block
                push(2147483648)
                push(4294967294)
                mstore
                drop
                pad
                incr
                noop
            end
            external.0xfd69ca23fb1a80cbb7f46328228ae5ff3d34c4b557457de910036132484614cb
        end
        basic_block add add end
    end
end
