crates/assembly/src/tests/snapshots/miden_assembly__tests__constants__multiple_constants_push.snap
---
source: crates/assembly/src/tests/constants.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        push(21)
        push(64)
        push(44)
        push(72)
        noop
        noop
    end
end
