crates/assembly/src/tests/snapshots/miden_assembly__tests__constants__simple_constant.snap
---
source: crates/assembly/src/tests/constants.rs
expression: program
---
begin
    basic_block push(2147483648) push(4294967294) mstore drop push(7) noop end
end
