crates/assembly/src/tests/snapshots/miden_assembly__tests__constants__typed_constant_assembles.snap
---
source: crates/assembly/src/tests/constants.rs
expression: program
---
begin
    basic_block push(2147483648) push(4294967294) mstore drop push(42) noop end
end
